# tier4_automotive_hdr_camera

./: .editorconfig  .gitignore  .gitmodules  README.md
.github/workflows/: build-drivers-hosted.yaml  camera-hotplug-hosted.yaml  ecu-rqx58g-a.yaml  ecu-rqx58g-b.yaml  ecu-rqx58g-c.yaml  hotplug-hosted.yaml  test-make-overlay-dts.yaml  test-v4l2-gstreamer-hosted.yaml  unload-drivers-hosted.yaml
drivers/: README.md  create_deb_pkg.sh  dkms.conf
drivers/debian/: README.Debian  README.source  changelog  control  postinst  preinst  prerm  rules  udev
drivers/src/: Makefile  gen_firmware.py  make_overlay_dts_anvil.py  make_overlay_dts_eac-5000.py  make_overlay_dts_orin-devkit.py  make_overlay_dts_roscube-orin-r364.py  make_overlay_dts_roscube-orin.py  make_overlay_dts_roscube.py  make_overlay_dts_xavier-devkit.py  max20089.c  max20089.h  tier4-fpga.c  tier4-fpga.h  tier4-gmsl-link.h  tier4-gw5300.c  tier4-gw5300.h  tier4-hw-model.h  tier4-imx490-gmsl-device-tree-overlay-orin-r3411_r351.dts  tier4-imx490-gmsl-device-tree-overlay-orin.dts  tier4-imx490-gmsl-device-tree-overlay-roscube-orin-r351.dts  tier4-imx490-gmsl-device-tree-overlay-roscube-r32_x.dts  tier4-imx490-gmsl-device-tree-overlay-roscube-r3411_r351.dts  tier4-imx490-gmsl-device-tree-overlay-xavier-r32_x.dts  tier4-imx490-gmsl-device-tree-overlay-xavier-r3411_r351.dts  tier4-imx490-gmsl-device-tree-overlay-xavier.dts  tier4-imx490-gmsl-device-tree-overlay.dts  tier4-imx490.c  tier4-imx728.c  tier4-isx021-ctrl.c  tier4-isx021-ctrl.h  tier4-isx021-extern.h  tier4-isx021-gmsl-device-tree-overlay-orin-r3411_r351.dts  tier4-isx021-gmsl-device-tree-overlay-orin-r34_r35.dts  tier4-isx021-gmsl-device-tree-overlay-orin.dts  tier4-isx021-gmsl-device-tree-overlay-roscube-orin-r351.dts  tier4-isx021-gmsl-device-tree-overlay-roscube-r32_x.dts  tier4-isx021-gmsl-device-tree-overlay-roscube-r3411_r351.dts  tier4-isx021-gmsl-device-tree-overlay-xavier-r32_x.dts  tier4-isx021-gmsl-device-tree-overlay-xavier-r3411_r351.dts  tier4-isx021-gmsl-device-tree-overlay-xavier-r34_r35.dts  (+20 more)
drivers/src/dts_generator/: camera.py  devicetree.py  options.py  tegra_nvcsi.py  tegra_vi.py
drivers/tools/: README.md  gen_firmware.py  make_overlay_dtb.py  revert_source.sh  tier4-isx021_regaddr_number_to_reg_addr.txt
img/: module-graph.dot
makefile/: README
pkg/: create_deb_pkg.sh  dkms.conf
pkg/debian/: changelog  control  postinst  prerm  rules  udev
scripts/c1/err_report/: show_ser_des_registers.sh
scripts/c1/gst_launch/: gstlaunch_1.sh  gstlaunch_4.sh  gstlaunch_record_1.sh  gstlaunch_show_fps_1.sh
scripts/c1/mode_switch/: set_master_mode.sh
scripts/c1/param_setting/: port3-4_AE_setting_read.sh
scripts/c1/reset/: READE  reset_dual.sh  reset_single.sh
scripts/c2/: .integration.sh.swp  ae.sh  get_information.sh  integration.sh
scripts/c2/gst-launch/: gstlaunch_1-imx490.sh
scripts/common/hotplug/: camera-hotplug.sh
scripts/gst_launch/: gstlaunch_8.sh
scripts/mode_switch/: set_slave_mode.sh
scripts/param_setting/: port1-2_AE_setting_read.sh
scripts/trigger/: camera_trigger.sh
src/tier4-camera-gmsl/: Makefile  Makefile.dkms  Makefile.r36  tier4-fpga.c  tier4-fpga.h  tier4-gmsl-link.h  tier4-gw5300.c  tier4-gw5300.h  tier4-hw-model.h  tier4-imx490.c  tier4-imx728.c  tier4-isx021.c  tier4-max9295.c  tier4-max9295.h  tier4-max9296.c  tier4-max9296.h
targets/orin/: 01_get_src.sh  02_patch.sh  03_setup_env.sh  04_build.sh  05_extract_file.sh
targets/orin/patch/: copy.sh
targets/roscube/: .gitignore  Makefile.except_ctrl_ko  README.md  create_pkg  dkms.conf
tools/: CMakeLists.txt  README.md  default.yaml
tools/cmake/: Toolchain-V5L.cmake
tools/ctrl/: CMakeLists.txt  Slider.cpp  Slider.h  c1.cpp  c2.cpp  cmdline.h  default.yaml  gui.cpp  gui.h  gui_c2.cpp  gui_callback.cpp  gui_callback_c2.cpp  t4cam-ctrl.cpp  t4cam-ctrl2.cpp
tools/dts_generator/: make_overlay_dts_anvil.py  make_overlay_dts_orin-devkit-r36.py  make_overlay_dts_rml-a4agx-r36.py  make_overlay_dts_roscube-orin-r36.py  make_overlay_dts_roscube-orin.py  make_overlay_dts_roscube.py  tier4-imx490-gmsl-device-tree-overlay-anvil-r36.dts
tools/dts_generator/dts_generator/: __init__.py  camera.py  const.py  devicetree.py  gmsl.py  media_graph.py  options.py  tegra_nvcsi.py  tegra_vi.py
tools/dts_generator/dtsi/: tegra-camera-base-r36.dtsi  tegra-camera-syslogic-r36.dtsi
tools/example/: CMakeLists.txt  set_gain_sample.cpp
tools/lib/: .t4cam_tools.cpp.swp  CMakeLists.txt
tools/lib/include/: t4cam_tools.hpp
tools/lib/src/: .t4cam_tools.cpp.swp  c1_reg.hpp  c2.cpp  c2_reg.hpp  gw5300.hpp  i2c.cpp  i2c.hpp  t4cam_tools.cpp  t4cam_tools_c2.cpp
tools/lib/test/: setting_read_raw.cpp  test.cpp
tools/temp/: awb.sh  bri.sh  cont.sh  dwp.sh  dwp_on.sh  hue.sh  sat.sh
(+30 files in other folders)
